#----------------------------------------------------------------------------
# Copyright (c) <2016-2018>, <Huawei Technologies Co., Ltd>
# All rights reserved.
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
# 1. Redistributions of source code must retain the above copyright notice, this list of
# conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
# of conditions and the following disclaimer in the documentation and/or other materials
# provided with the distribution.
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
# to endorse or promote products derived from this software without specific prior written
# permission.
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#---------------------------------------------------------------------------#/
#----------------------------------------------------------------------------
# Notice of Export Control Law
# ===============================================
# Huawei LiteOS may be subject to applicable export control laws and regulations, which might
# include those applicable to Huawei LiteOS of U.S. and the country in which you are located.
# Import, export and usage of Huawei LiteOS in any manner by you shall be in compliance with such
# applicable export control laws and regulations.
#---------------------------------------------------------------------------


dtls_inc = [
    "mbedtls/mbedtls_port",
    "../../inc",
    "../../link_misc",
    "../../iot_device_sdk_tiny_config",
    "../../os/osal",
    "../../network/tcpip/sal",
    "../../network/dtls/dtls_al",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/third_party/mbedtls/include",
]

dtls_src = [
    "dtls_al/dtls_al.c",
    "mbedtls/mbedtls_port/dtls_interface.c",
    "mbedtls/mbedtls_port/mbed_port.c",
    "mbedtls/mbedtls_port/timing_alt.c",
]

dtls_def = [
    "WITH_DTLS",
    "MBEDTLS_AES_ROM_TABLES",
    #"MBEDTLS_CONFIG_FILE=<los_mbedtls_config_dtls.h>",
    "MBEDTLS_CONFIG_FILE=\"mbedtls/config.h\"",
    "CONFIG_DTLS_MBEDTLS_CERT",
    "CONFIG_DTLS_MBEDTLS_PSK",
    "CFG_MBEDTLS_MODE=PSK_CERT",
]

dtls_cflags = [
    "-Wno-sign-compare",
    "-Wno-unused-parameter",
]

static_library("dtls") {
    cflags = dtls_cflags
    defines = dtls_def
    sources = dtls_src
    include_dirs = dtls_inc
}
